# MachineLearning

./: .gitignore  Dockerfile  README.md  model.py  pyproject.toml
machinelearning/: model.py
notebook/: notebook.ipynb
