[project]
name = "machinelearning"
version = "0.1.0"
description = ""
authors = [
    {name = "Anisimov Aleksey",email = "fallengalaxy5000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost (>=1.2.7,<2.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "fire (>=0.7.0,<0.8.0)",
    "torch (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
